@startuml
node "Replit" {
    artifact "Quiz API Ruby" as webApp
    artifact "quiz.db Sqlite3" as db
}

node "Teléfono Android" {
    artifact "ULima Quiz" as mobileApp
}

node "Open Street Server" {
    artifact "Open Street API" as maps
}

webApp -down-> db : "Consulta y guarda datos"
mobileApp -left-> webApp : "Consume servicios REST"
mobileApp -left-> maps : "Consume servicios REST"
@enduml


@startuml
class User {
    +id: int
    +username: String
    +password: String
    +email: String
    +image: String
    +fullname: String
}

class Topic {
    +id: int
    +name: String
    +icon: String
    +description: String
}

class Question {
    +id: int
    +statement: String
    +topic_id: int
}

class Alternative{
    +id: int
    +statement: String
    +correct: boolean
    +question_id: int
}

class Quiz{
    +id: int
    +statement: String??
    +created: Datetime
    +user_id: int
}

class QuizQuestion{
    +id: int
    +quiz_id: int
    +quiestion_id: int
}

User "1" -- "m" Quiz
Question "1" -- "m" QuizQuestion
Quiz"1" -- "m" QuizQuestion
Question "1" -- "m" Alternative
Topic "1" -- "m" Question 

@enduml

@startuml
actor "Usuario" as User
actor "Administrador" as Admin

rectangle "Sistema de Quizzes" {
    usecase "Registrarse" as UC1
    usecase "Iniciar sesión" as UC2
    usecase "Crear Quiz" as UC3
    usecase "Responder Quiz" as UC4
    usecase "Ver historial de Quizzes" as UC5
    usecase "Gestionar Preguntas" as UC6
}

User --> UC1
User --> UC2
User --> UC3
User --> UC4
User --> UC5

Admin --> UC6
Admin --> UC5

@enduml